--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==1.0.2
-Flask-RESTful==0.3.6
-gensim==3.6.0
+python-dotenv==0.19.0
+Flask==2.2.0
+Flask-RESTful==0.3.10
+gensim==4.3.2
 future==0.17.1
+Werkzeug==2.2.2
